--- a/pods-setup/svc1.yaml
+++ b/pods-setup/svc1.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-web-hello
+  name: depl1
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: k8s-web-hello
+    app: depl1
   ports:
   - port: 3030
     targetPort: 3000
