--- a/envoy-img/envoy.yaml
+++ b/envoy-img/envoy.yaml
@@ -10,9 +10,13 @@ static_resources:
       socket_address: { address: 0.0.0.0, port_value: 80 }
     filter_chains:
     - filters:
-      - name: envoy.http_connection_manager
-        config:
+      - name: envoy.filters.network.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          codec_type: AUTO
           stat_prefix: ingress_http
+          common_http_protocol_options:
+            idle_timeout: ${TIMEOUT}
           route_config:
             name: local_route
             virtual_hosts:
@@ -20,13 +24,39 @@ static_resources:
               domains: ["*"]
               routes:
               - match: { prefix: "/" }
-                route: { host_rewrite: hw1, cluster: hw1, timeout: 60s }
+                route: { host_rewrite_literal: ${SERVICE_NAME}, cluster: ${SERVICE_NAME}, timeout: ${TIMEOUT} }
+          access_log:
+          - name: envoy.access_loggers.file
+            typed_config:
+              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+              path: /dev/stdout
           http_filters:
-          - name: envoy.router
+          - name: envoy.filters.http.router
+            typed_config:
+              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
-  - name: hw1
-    connect_timeout: 0.25s
+  - name: ${SERVICE_NAME}
+    connect_timeout: ${TIMEOUT}
     type: STRICT_DNS
     dns_lookup_family: V4_ONLY
-    lb_policy: LEAST_REQUEST
-    hosts: [{ socket_address: { address: hw1, port_value: 3000 }}]
+    lb_policy: ${ENVOY_LB_ALG}
+    common_http_protocol_options:
+      idle_timeout: ${TIMEOUT}
+    load_assignment:
+      cluster_name: ${SERVICE_NAME}
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: ${SERVICE_NAME}
+                port_value: 3000
+            health_check_config:
+              port_value: 3000
+          health_status: HEALTHY
+    circuit_breakers:
+      thresholds:
+        - priority: DEFAULT
+          max_connections: 10000
+          max_requests: 10000
+  
