--- a/pods-setup-Nov20/envoy-depl-app2.yaml
+++ b/pods-setup-Nov20/envoy-depl-app2.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: envoy-lb-hw1
+  name: envoy-lb-app2
   labels:
-    app: envoy-lb-hw1
+    app: envoy-lb-app2
 spec:
   selector:
     matchLabels:
-      app: envoy-lb-hw1
+      app: envoy-lb-app2
   replicas: 1
   template:
     metadata:
       labels:
-        app: envoy-lb-hw1
+        app: envoy-lb-app2
     spec:
       containers:
-      - name: envoy-lb-hw1
+      - name: envoy-lb-app2
         image: talhawaheed/envoy-lb:1
         imagePullPolicy: Always
         env:
         - name: "SERVICE_NAME"
-          value: "hw1"
+          value: "app2"
         - name: "ENVOY_LB_ALG"
           value: "LEAST_REQUEST"
         ports:
